<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CIA               Versión 3.1.3</string>
    <string name="action_settings">Settings</string>
    <string name="coso">Settings</string>
    <string name="WebServiceURL">http://10.0.2.2</string>
    <string name="upload">Subir fotos</string>
    <string name="takephoto">Tomar una foto</string>
    <string name="view1">Ver fotos por subir</string>
    <string name="view2">Ver fotos por enlazar</string>
    <string name="hello_world">Hello world!</string>
    <string name="exception_message">Server error, try later</string>
    <string name="internal_exception_message">Internal error occurred</string>
    <string name="security_exception_message">Security error occurred</string>
    <string name="CanceledMessage">Canceled</string>
    <string name="ConnectionTimeOut">5000</string>
    <string name="SocketTimeout">5000</string>
    <string name="selectBtn">Subir fotos</string>
    <string name="probe">Prueba FTP</string>
    <string name="close">Salir</string>
    <string name="buttonUpload">Subir Foto</string>
    <string name="buttonExit">Salir</string>
    <string name="descripcion">Datos de la fotografía</string>
    <string name="nombre">Ingrese el nombre: </string>
    <string name="comentarios">Ingrese un comentario: </string>
    <string name="strBtnSubir">Subir archivos</string>
    <string name="strBtnSalir">Salir subir archivo</string>
    <string name="strImgLogo">Logo CIA</string>
    <string name="title_activity_gallery_activity_show">CIA Versión 3.1.3</string>
    <string name="strBack">Regresar</string>
    <string name="strVincular">Vincular imagen</string>
    <string name="strAsunto">Asunto:</string>
    <string name="strComentario">Comentario:</string>

</resources>
